# python-fastapi

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  application.toml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docker/prod/: Dockerfile
src/: main.py  settings.py
