[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = "Template repository for an API with Python FastAPI"
authors = ["Lucas Vidor Migotto <lvmigotto1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
